# linkforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  run.py
.github/workflows/: ci.yml  deploy.yml
Seed Data/: events.csv  urls.csv  users.csv
app/: __init__.py  cache.py  config.py  database.py  errors.py  logging.py  metrics.py  validators.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  events.py  health.py  urls.py  users.py
app/services/: events.py  health.py  short_codes.py  urls.py  users.py
docs/: api.md  architecture.md  deploy.md  env.md  failure-modes.md  judge-demo.md  load-testing.md  runbook.md
docs/evidence/: bronze-50vus.txt  gold-400vus.txt  gold-xcache.txt  silver-200vus.txt  silver-nginx-upstream.txt
docs/judging/: documentation.md  incident-response.md  reliability.md  scalability.md
ops/: locustfile.py
ops/nginx/: nginx.conf
ops/prometheus/: prometheus.yml
scripts/: bootstrap_db.py  chaos_demo.sh  evaluator_smoke.sh  monitor.py  reset_app_db.sh  run_load_test.sh  seed.py  smoke.sh  summarize_locust.py
tests/: conftest.py
tests/integration/: conftest.py  test_delete.py  test_evaluator_contract.py  test_events_and_health_routes.py  test_redirect.py  test_route_edge_cases.py  test_seed.py  test_service_urls.py  test_service_users.py  test_shorten.py  test_user_urls.py
tests/unit/: test_cache.py  test_errors.py  test_event_services.py  test_health_service.py  test_runtime_support.py  test_short_codes.py  test_validators.py
(+46 files in other folders)
