[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1,<4",
    "gunicorn>=23.0,<24",
    "peewee>=3.17,<4",
    "prometheus-client>=0.22,<1",
    "psycopg2-binary>=2.9,<3",
    "python-dotenv>=1.0,<2",
    "python-json-logger>=2.0,<4",
    "redis>=5.0,<6",
]

[dependency-groups]
dev = [
    "locust>=2.37,<3",
    "pytest>=8.3,<9",
    "pytest-cov>=6.1,<7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
